<resources>
    <string name="app_name">Caller ID Reputation</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="login">Login</string>
    <string name="qr_code">QR code</string>
    <string name="app_logo">App logo</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="authentication_successful">Authentication successful</string>
    <string name="the_body_is_empty">The body is empty</string>
    <string name="response_is_empty">Response is empty</string>
    <string name="response_isnt_successful">The response isn\'t successful</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="cancelled">Cancelled</string>
    <string name="sign_out">Sign out</string>
    <string name="qr_code_prompt">Point your camera at the QR code</string>
    <string name="notification_title">Notification %1$d</string>
    <string name="phone_text">Phone</string>
    <string name="service_text">Service</string>
    <string name="description_text">Description</string>
    <string name="created_at_text">Created at</string>
    <string name="read_at_text">Read at</string>
    <string name="last_ten_flagged_numbers">Last Ten Flagged Numbers</string>
    <string name="unable_to_get_last_10_flagged_phones">Unable to get last 10 flagged phones</string>
    <string name="date_text">Date</string>
    <string name="phone_number_text">Phone number</string>
    <string name="settings">Settings</string>
    <string name="push">Push</string>
    <string name="new_phone_was_flagged">New phone was flagged</string>
    <string name="qr_code_authentication">QR Code Authentication</string>
    <string name="unable_to_open_camera_without_permission">Unable to open camera without permission</string>
</resources>
