<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    android:onClick="hideKeyboard"
    tools:context=".activities.AuthActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/auth_form"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/auth_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/email_edit"
                style="@style/MyEditText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:background="@null"
                android:ems="12"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/password_edit" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/password_edit"
                style="@style/MyEditText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:background="@null"
                android:ems="12"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@drawable/login_button_text" />
    </LinearLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/auth_form"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:contentDescription="@string/qr_code"
        android:focusable="true"
        android:onClick="qrLogin"
        android:src="@drawable/qr_code" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>